<resources>
    <string name="app_name">WG-Planer</string>
    <string name="addTodo">Hinzufügen eines Todos</string>
    <string name="occupied">Belegt</string>
    <string name="cal_chooser">Wähle aus einem Kalender aus</string>
    <string name="change_quantity">Anzahl ändern</string>
    <string name="changeAllowed">Der Artikel kann nun geändert werden!</string>
    <string name="content">Beschreibung</string>
    <string name="customArt">Artikel Hinzufügen</string>
    <string name="customToDo">Eintrag Hinzufügen</string>
    <string name="datum">Datum</string>
    <string name="delete">Löschen</string>
    <string name="print">Drucken</string>
    <string name="edit">Ändern</string>
    <string name="editQr">QrCode editieren</string>
    <string name="end">Ende</string>
    <string name="done">Erledigt</string>
    <string name="finished">Fertig</string>
    <string name="id">ID:</string>
    <string name="info">Info</string>
    <string name="info_qr_scanner">Scanne einen QR Code um die Artikel hinzuzufügen</string>
    <string name="info_qr_scanner_new_code">Tippe in die Kamera um einen neuen Code zu scannen</string>
    <string name="info_qr_scanner_no_permission">Anzeigen ohne Kameraberechtigung nicht möglich</string>
    <string name="calendar">Kalender</string>
    <string name="newQr">Neuer QrCode</string>
    <string name="no_template">Keine Vorlagen vorhanden</string>
    <string name="qr_code">QR-Code</string>
    <string name="qrCodeActionBar">QrCode Zuweisungstabelle</string>
    <string name="qrscanner">Qr-Scanner</string>
    <string name="qrMenu">QrMenu</string>
    <string name="shoppingList">Einkaufsliste</string>
    <string name="start">Start</string>
    <string name="str_back">Schließen</string>
    <string name="cancel">Abbrechen</string>
    <string name="string_add">Hinzufügen</string>
    <string name="save">Speichern</string>
    <string name="thisQrIsNotInDatabase">Diesen QR-Code gibt es nicht. Versuchen sie es erneut!</string>
    <string name="todo">ToDo Liste</string>
    <string name="quantity">Anzahl</string>
    <string name="tv_content">Bezeichnung</string>
    <string name="title">Titel</string>
    <string name="time">Uhrzeit</string>
    <string name="template">Vorlage</string>
    <string name="week_number">Kalenderwoche</string>
    <string name="editcal">Ändern des Eintrags</string>
    <string name="error">Ein Fehler ist passiert!</string>
    <string name="end_bigger_start">Das End-Datum muss nach dem Anfangsdatum sein!</string>
    <string name="fill_all">Bitte alle Felder ausfüllen</string>
    <string name="remove_cal">Der Eintrag wurde gelöscht!</string>
    <string name="no_permission_cal">Ohne Berechtigung kann das Programm möglicherweise nicht richtig funktionieren.</string>
    <string name="beginn">Beginn</string>
    <string name="choose_template">Wähle eine Vorlage!</string>
    <string name="amount_zero">Geben Sie eine Zahl größer als 0 ein!</string>
    <string name="article_edited">Der Artikel wurde geändert!</string>
    <string name="no_account">Anmeldung fehlgeschlagen! Ohne Account kann die App nicht ausgeführt werden!</string>
    <string name="delete_all">Erledigte löschen</string>
    <string name="delete_all_art">Alle abgeschlossenen Artikel gelöscht</string>
    <string name="delete_all_todo">Alle abgeschlossenen Einträge gelöscht</string>
    <string name="logout">Ausloggen</string>
    <string name="cal_no_entry">kein Eintrag für diese Woche</string>
</resources>