<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_shoppinglist">

    <fragment
        android:id="@+id/nav_todo"
        android:name="at.wifi.swdev.android.wgapp.todolist.TodoListMainFragment"
        android:label="@string/todo"
        tools:layout="@layout/fragment_todo_list_main" />

    <fragment
        android:id="@+id/nav_shoppinglist"
        android:name="at.wifi.swdev.android.wgapp.shoppinglist.ShoppingListFragment"
        android:label="@string/shoppingList"
        tools:layout="@layout/fragment_shooping_list" />

    <fragment
        android:id="@+id/nav_cal"
        android:name="at.wifi.swdev.android.wgapp.calendar.CalendarMainFragment"
        android:label="@string/calendar"
        tools:layout="@layout/fragment_calendar_main" />
</navigation>
